Fix issue causing blurring or snapping of project's inner-content after transition

--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -39,6 +39,9 @@
 
   > * {
     opacity: 0;
+    // This will-change property prevents some strange visual effects in Chrome and Firefox after the opacity transition is completed.
+    will-change: opacity;
+
     transition: opacity 500ms ease;
   }
 }
